<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drive_system</name>
  <version>0.1.0</version>
  <description>Allows the Drive System to interact with ROS.</description>
  <maintainer email="57426668+BruhSoundEffectNumber2@users.noreply.github.com">damon</maintainer>
  <license>MIT</license>

  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
